ingress-nginx/06-rewrite/rewrite-echo-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-echo-with-rewrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: rewrite.echo.example 
    http:
      paths:
      - path: /rewrite/(.*)
        backend:
          serviceName: echo
          servicePort: 80
      - path: /abc(.*)
        backend:
          serviceName: echo
          servicePort: 80
